force-app/main/default/objects/Opportunity/fields/Current_Year_Amount__c.field-meta.xml
<CustomField>
    <fullName>Current_Year_Amount__c</fullName>
    <formula>IF( YEAR( CloseDate ) = YEAR(TODAY()) , Amount  , 0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Year Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>