force-app/main/default/objects/Opportunity/fields/Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Number__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Unique Invoice Number</inlineHelpText>
    <label>Invoice Number</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>