force-app/main/default/objects/Opportunity/fields/Previous_Year_Amount__c.field-meta.xml
<CustomField>
    <fullName>Previous_Year_Amount__c</fullName>
    <formula>IF( YEAR( CloseDate ) = YEAR(TODAY()) - 1 , Amount , 0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Previous Year Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>